Dutch translation: fix syntax error

--- a/po/nl.po
+++ b/po/nl.po
@@ -2015,7 +2015,7 @@ msgstr "&Verborgen"
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2359
 #, no-c-format
 msgid "&Ignore playlists meant for menus"
-msgstr "&Negeer afspeellijsten die bedoeld zijn voor menu's""
+msgstr "&Negeer afspeellijsten die bedoeld zijn voor menu's"
 
 #: src/mkvtoolnix-gui/forms/util/language_dialog.h:386
 #, no-c-format
