--- a/AUTHORS
+++ b/AUTHORS
@@ -274,6 +274,9 @@ Ricardo Perdigão <ricardofonseca1977@gmail.com>
 Robert Buj <rbuj@fedoraproject.org>
     * Catalan translation
 
+Rob Cuiper <robcuiper@gmail.com>
+    * Dutch translation
+
 Robert Millan <rmh@aybabtu.com>
     * MIME type recognition via libmagic
     * Fix for a malloc bomb in the PCM handling
