program translations: update French

--- a/po/fr.po
+++ b/po/fr.po
@@ -1621,7 +1621,7 @@ msgstr[2] "%1 entrées"
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:133
 #, no-c-format
 msgid "%1 from earlier runs"
-msgstr ""
+msgstr "%1 des exécutions précédentes"
 
 #: src/mkvtoolnix-gui/header_editor/track_type_page.cpp:142
 #: src/mkvtoolnix-gui/merge/select_playlist_dialog.cpp:118
@@ -1634,7 +1634,7 @@ msgstr "%1 pixels"
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:132
 #, no-c-format
 msgid "%1 since starting the program"
-msgstr ""
+msgstr "%1 depuis le lancement"
 
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:117
 #, fuzzy, no-c-format
@@ -9681,9 +9681,9 @@ msgid "Number of chapters:"
 msgstr "Nombre de chapitres :"
 
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:131
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Number of errors:"
-msgstr "Nombre de chapitres :"
+msgstr "Nombre d'erreurs :"
 
 #: src/mkvtoolnix-gui/info/element_highlighter.cpp:197
 #, no-c-format
@@ -9696,9 +9696,9 @@ msgid "Number of nanoseconds (not scaled) per frame."
 msgstr "Nombre de nanosecondes (non mises à l'échelle) par trame."
 
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:126
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Number of warnings:"
-msgstr "Nombre de chapitres :"
+msgstr "Nombre d'avertissements :"
 
 #: src/common/property_element.cpp:213
 #, no-c-format
