program translations: update Dutch

--- a/po/nl.po
+++ b/po/nl.po
@@ -657,14 +657,14 @@ msgstr ""
 "                           (cd/m²).\n"
 
 #: src/merge/mkvmerge.cpp:235
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "  --no-chapters            Don't keep chapters from the source file.\n"
-msgstr "  --no-chapters     Neem hoofdstukken uit bronbestand niet over.\n"
+msgstr "  --no-chapters            Neem hoofdstukken uit bronbestand niet over.\n"
 
 #: src/merge/mkvmerge.cpp:136
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "  --no-cues                Do not write the cue data (the index).\n"
-msgstr "  --no-cues         Schrijf geen volg document(en) (cue) data (de index).\n"
+msgstr "  --no-cues                         Schrijf geen volg document(en) (cue) data  (de index).\n"
 
 #: src/merge/mkvmerge.cpp:137
 #, no-c-format
@@ -1217,9 +1217,9 @@ msgstr ""
 "                           basis naam maar met een ander volg nummer.\n"
 
 #: src/merge/mkvmerge.cpp:188
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "  =<file>                  Same as \"= <file>\".\n"
-msgstr "  =<file>           Hetzelfde als \"= <file>\".\n"
+msgstr "  =<file>                  Hetzelfde als \"= <file>\".\n"
 
 #: src/merge/mkvmerge.cpp:418
 #, no-c-format
