program translations: update Russian

--- a/po/ru.po
+++ b/po/ru.po
@@ -11,7 +11,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2024-08-27 21:24+0200\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
-"Last-Translator: Andrei Stepanov, 2018-2024\n"
+"Last-Translator: solokot <solokot@gmail.com>, 2019-2024\n"
 "Language-Team: Russian (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/ru/)\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
@@ -1363,7 +1363,7 @@ msgstr[3] "%1 записей"
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:133
 #, no-c-format
 msgid "%1 from earlier runs"
-msgstr ""
+msgstr "%1 с прошлых запусков"
 
 #: src/mkvtoolnix-gui/header_editor/track_type_page.cpp:142
 #: src/mkvtoolnix-gui/merge/select_playlist_dialog.cpp:118
@@ -1376,25 +1376,25 @@ msgstr "%1 пикселей"
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:132
 #, no-c-format
 msgid "%1 since starting the program"
-msgstr ""
+msgstr "%1 с момента запуска программы"
 
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:117
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "%1+%2 error"
 msgid_plural "%1+%2 errors"
-msgstr[0] "%1 ошибка"
-msgstr[1] "%1 ошибки"
-msgstr[2] "%1 ошибок"
-msgstr[3] "%1 ошибок"
+msgstr[0] "%1+%2 ошибка"
+msgstr[1] "%1+%2 ошибки"
+msgstr[2] "%1+%2 ошибок"
+msgstr[3] "%1+%2 ошибок"
 
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:116
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "%1+%2 warning"
 msgid_plural "%1+%2 warnings"
-msgstr[0] "%1 предупреждение"
-msgstr[1] "%1 предупреждения"
-msgstr[2] "%1 предупреждений"
-msgstr[3] "%1 предупреждений"
+msgstr[0] "%1+%2 предупреждение"
+msgstr[1] "%1+%2 предупреждения"
+msgstr[2] "%1+%2 предупреждений"
+msgstr[3] "%1+%2 предупреждений"
 
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:350
 #, no-c-format
@@ -9437,9 +9437,9 @@ msgid "Number of chapters:"
 msgstr "Количество глав:"
 
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:131
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Number of errors:"
-msgstr "Количество глав:"
+msgstr "Ошибок:"
 
 #: src/mkvtoolnix-gui/info/element_highlighter.cpp:197
 #, no-c-format
@@ -9452,9 +9452,9 @@ msgid "Number of nanoseconds (not scaled) per frame."
 msgstr "Количество наносекунд (не масштабированное) на кадр."
 
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:126
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Number of warnings:"
-msgstr "Количество глав:"
+msgstr "Предупреждений:"
 
 #: src/common/property_element.cpp:213
 #, no-c-format
