program translations: update Turkish

--- a/po/tr.po
+++ b/po/tr.po
@@ -1605,7 +1605,7 @@ msgstr[1] "%1 giriş"
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:133
 #, no-c-format
 msgid "%1 from earlier runs"
-msgstr ""
+msgstr "Önceki çalıştırmalardan %1"
 
 #: src/mkvtoolnix-gui/header_editor/track_type_page.cpp:142
 #: src/mkvtoolnix-gui/merge/select_playlist_dialog.cpp:118
@@ -1618,21 +1618,21 @@ msgstr "%1 piksel"
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:132
 #, no-c-format
 msgid "%1 since starting the program"
-msgstr ""
+msgstr "programın başlatılmasından bu yana %1"
 
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:117
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "%1+%2 error"
 msgid_plural "%1+%2 errors"
-msgstr[0] "%1 hata"
-msgstr[1] "%1 hata"
+msgstr[0] "%1+%2 hata"
+msgstr[1] "%1+%2 hata"
 
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:116
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "%1+%2 warning"
 msgid_plural "%1+%2 warnings"
-msgstr[0] "%1 uyarı"
-msgstr[1] "%1 uyarı"
+msgstr[0] "%1+%2 uyarı"
+msgstr[1] "%1+%2 uyarı"
 
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:350
 #, no-c-format
@@ -2106,7 +2106,7 @@ msgstr "Şurada belirtilen etkene göre başlangıç ​ve bitiş za&man damgala
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2318
 #, no-c-format
 msgid "&Name:"
-msgstr "&Adı:"
+msgstr "&Ad:"
 
 #: src/mkvtoolnix-gui/forms/chapter_editor/tool.h:193
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:604
@@ -9147,7 +9147,7 @@ msgstr "İsi&m şablonu:"
 #: src/mkvtoolnix-gui/merge/track_model.cpp:77
 #, no-c-format
 msgid "Name"
-msgstr "Adı"
+msgstr "Ad"
 
 #: src/mkvtoolnix-gui/forms/chapter_editor/generate_sub_chapters_parameters_dialog.h:184
 #, no-c-format
@@ -9162,14 +9162,14 @@ msgstr "Ad şablonu:"
 #: src/mkvtoolnix-gui/header_editor/page_model.cpp:165
 #, no-c-format
 msgid "Name/Description"
-msgstr "Adı/Tanım"
+msgstr "Ad/Tanım"
 
 #: src/mkvtoolnix-gui/forms/header_editor/track_type_page.h:309
 #: src/mkvtoolnix-gui/forms/info/element_viewer_dialog.h:222
 #: src/mkvtoolnix-gui/header_editor/track_type_page.cpp:86
 #, no-c-format
 msgid "Name:"
-msgstr "Adı:"
+msgstr "Ad:"
 
 #: src/mkvtoolnix-gui/forms/chapter_editor/tab.h:530
 #, no-c-format
@@ -9653,9 +9653,9 @@ msgid "Number of chapters:"
 msgstr "Bölüm sayısı:"
 
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:131
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Number of errors:"
-msgstr "Bölüm sayısı:"
+msgstr "Hata sayısı:"
 
 #: src/mkvtoolnix-gui/info/element_highlighter.cpp:197
 #, no-c-format
@@ -9668,9 +9668,9 @@ msgid "Number of nanoseconds (not scaled) per frame."
 msgstr "Kare başına nanosaniye (ölçeklendirilmemiş) sayısı."
 
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:126
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Number of warnings:"
-msgstr "Bölüm sayısı:"
+msgstr "Uyarı sayısı:"
 
 #: src/common/property_element.cpp:213
 #, no-c-format
@@ -11201,7 +11201,7 @@ msgstr "Arama girişi"
 #: src/mkvtoolnix-gui/forms/chapter_editor/tab.h:525
 #, no-c-format
 msgid "Seg&ment UID:"
-msgstr "P&arça UID:"
+msgstr "Parça UI&D:"
 
 #: src/common/kax_element_names.cpp:86
 #, no-c-format
@@ -11751,7 +11751,7 @@ msgstr "Bazı etiket öğeleri eksik (bu hata meydana gelmemeliydi - başka bir 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2189
 #, no-c-format
 msgid "Source &files:"
-msgstr "Kaynak &dosyalar:"
+msgstr "Kaynak dosyala&r:"
 
 #: src/mkvtoolnix-gui/merge/track_model.cpp:83
 #, no-c-format
