program translations: update Catalan

--- a/po/ca.po
+++ b/po/ca.po
@@ -1679,7 +1679,7 @@ msgstr[1] "%1 entrades"
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:133
 #, no-c-format
 msgid "%1 from earlier runs"
-msgstr ""
+msgstr "%1 des d'execucions anteriors"
 
 #: src/mkvtoolnix-gui/header_editor/track_type_page.cpp:142
 #: src/mkvtoolnix-gui/merge/select_playlist_dialog.cpp:118
@@ -1692,21 +1692,21 @@ msgstr "%1 píxels"
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:132
 #, no-c-format
 msgid "%1 since starting the program"
-msgstr ""
+msgstr "%1 des de l'inici del programa"
 
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:117
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "%1+%2 error"
 msgid_plural "%1+%2 errors"
-msgstr[0] "%1 error"
-msgstr[1] "%1 errors"
+msgstr[0] "%1+%2 error"
+msgstr[1] "%1+%2 errors"
 
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:116
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "%1+%2 warning"
 msgid_plural "%1+%2 warnings"
-msgstr[0] "%1 avís"
-msgstr[1] "%1 avisos"
+msgstr[0] "%1+%2 avís"
+msgstr[1] "%1+%2 avisos"
 
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:350
 #, no-c-format
@@ -5721,9 +5721,9 @@ msgid "Default additional co&mmand line options:"
 msgstr "Opcions predeterminades addicionals de la &línia d'ordres:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2278
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Default command-&line escape mode:"
-msgstr "Opcions predeterminades addicionals de la &línia d'ordres:"
+msgstr "Mode d'escapament predeterminat de la línia d'ordres:"
 
 #: src/common/kax_element_names.cpp:209
 #: src/common/property_element.cpp:143
@@ -7265,11 +7265,9 @@ msgid "General variables"
 msgstr "Variables generals"
 
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:73
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Generate new random track UIDs instead of keeping existing ones."
-msgstr ""
-"  --regenerate-track-uids  Genera de forma aleatòria UID nous de seguiment\n"
-"                           en comptes mantenir els existents.\n"
+msgstr "Genera UID nous de pistes aleatòries en lloc de mantenir els existents."
 
 #: src/mkvtoolnix-gui/forms/chapter_editor/generate_sub_chapters_parameters_dialog.h:178
 #, no-c-format
@@ -7498,9 +7496,9 @@ msgstr "IVF (AV1, VP8, VP9)"
 
 #: src/mkvtoolnix-gui/merge/tool.cpp:965
 #: src/mkvtoolnix-gui/merge/tool.cpp:966
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Identifying files"
-msgstr "Afegiment de fitxers"
+msgstr "Identificant els fitxers"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:365
 #, no-c-format
@@ -9169,9 +9167,9 @@ msgid "Multiple modes can be used in the same invocation of mkvextract allowing 
 msgstr "Es poden usar múltiples modes en la mateixa invocació del «mkvextract» permetent l'extracció de múltiples coses en un sol pas."
 
 #: src/mkvtoolnix-gui/forms/merge/command_line_dialog.h:130
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Multiplex &settings:"
-msgstr "Següe&nts ajustaments de multiplexat"
+msgstr "Aju&staments del multiplexat:"
 
 #: src/mkvtoolnix-gui/jobs/mux_job.cpp:184
 #, no-c-format
@@ -9732,9 +9730,9 @@ msgid "Number of chapters:"
 msgstr "Nombre de capítols:"
 
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:131
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Number of errors:"
-msgstr "Nombre de capítols:"
+msgstr "Nombre d'errors:"
 
 #: src/mkvtoolnix-gui/info/element_highlighter.cpp:197
 #, no-c-format
@@ -9747,9 +9745,9 @@ msgid "Number of nanoseconds (not scaled) per frame."
 msgstr "Nombre de nanosegons (sense escalar) per fotograma."
 
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:126
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Number of warnings:"
-msgstr "Nombre de capítols:"
+msgstr "Nombre d'avisos:"
 
 #: src/common/property_element.cpp:213
 #, no-c-format
@@ -11526,7 +11524,7 @@ msgstr "Estableix una propietat al valor si és que existeix, d'altra manera, l'
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:412
 #, no-c-format
 msgid "Sets how to escape arguments by default in the 'Show command line' dialog."
-msgstr ""
+msgstr "Estableix com escapar els arguments de manera predeterminada al diàleg «Mostra la línia d'ordres»."
 
 #: src/propedit/propedit_cli_parser.cpp:248
 #, no-c-format
@@ -15554,7 +15552,7 @@ msgstr "Quan afegir fitxers mitjançant arrossega i deixa o copia i enganxa:"
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2282
 #, no-c-format
 msgid "When adding m&ultiple files via \"add source files\":"
-msgstr "Quan afegir múltiples fitxers mitjançant «Afegeix els fitxers font»:"
+msgstr "Quan afegir múltiples fitxers mitjançant «Afegeix els fitxers d'origen»:"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:560
 #, no-c-format
@@ -15577,9 +15575,9 @@ msgid "When deriving the track language from the file name, the file name is spl
 msgstr "Quan s'obté l'idioma de la pista a partir del nom del fitxer, el nom del fitxer es dividirà en parts amb els caràcters en aquesta llista."
 
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:74
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "When given, this option applies to all source files."
-msgstr "Quan afegir múltiples fitxers mitjançant «Afegeix els fitxers font»:"
+msgstr "Quan s'indica, aquesta opció s'aplicarà a tots els fitxers d'origen."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:371
 #, no-c-format
