program translations: update Spanish

--- a/po/es.po
+++ b/po/es.po
@@ -1701,7 +1701,7 @@ msgstr[2] "%1 registros"
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:133
 #, no-c-format
 msgid "%1 from earlier runs"
-msgstr ""
+msgstr "%1 de ejecuciones anteriores"
 
 #: src/mkvtoolnix-gui/header_editor/track_type_page.cpp:142
 #: src/mkvtoolnix-gui/merge/select_playlist_dialog.cpp:118
@@ -1714,23 +1714,23 @@ msgstr "%1 píxeles"
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:132
 #, no-c-format
 msgid "%1 since starting the program"
-msgstr ""
+msgstr "%1 desde que se inició el programa"
 
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:117
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "%1+%2 error"
 msgid_plural "%1+%2 errors"
-msgstr[0] "%1 error"
-msgstr[1] "%1 errores"
-msgstr[2] "%1 errores"
+msgstr[0] "%1+%2 error"
+msgstr[1] "%1+%2 errores"
+msgstr[2] "%1+%2 errores"
 
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:116
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "%1+%2 warning"
 msgid_plural "%1+%2 warnings"
-msgstr[0] "%1 advertencia"
-msgstr[1] "%1 advertencias"
-msgstr[2] "%1 advertencias"
+msgstr[0] "%1+%2 advertencia"
+msgstr[1] "%1+%2 advertencias"
+msgstr[2] "%1+%2 advertencias"
 
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:350
 #, no-c-format
@@ -9763,9 +9763,9 @@ msgid "Number of chapters:"
 msgstr "Números de capítulos:"
 
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:131
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Number of errors:"
-msgstr "Números de capítulos:"
+msgstr "Numero de errores:"
 
 #: src/mkvtoolnix-gui/info/element_highlighter.cpp:197
 #, no-c-format
@@ -9778,9 +9778,9 @@ msgid "Number of nanoseconds (not scaled) per frame."
 msgstr "Número de nanosegundos (sin escala) por fotograma (frame)."
 
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:126
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Number of warnings:"
-msgstr "Números de capítulos:"
+msgstr "Número de advertencias:"
 
 #: src/common/property_element.cpp:213
 #, no-c-format
