program translations: update Italian

--- a/po/it.po
+++ b/po/it.po
@@ -1626,7 +1626,7 @@ msgstr[2] "%1 elementi"
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:133
 #, no-c-format
 msgid "%1 from earlier runs"
-msgstr ""
+msgstr "%1 dalle esecuzioni precedenti"
 
 #: src/mkvtoolnix-gui/header_editor/track_type_page.cpp:142
 #: src/mkvtoolnix-gui/merge/select_playlist_dialog.cpp:118
@@ -1639,7 +1639,7 @@ msgstr "%1 pixel"
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:132
 #, no-c-format
 msgid "%1 since starting the program"
-msgstr ""
+msgstr "%1 dall'avvio del programma"
 
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:117
 #, fuzzy, no-c-format
@@ -9699,9 +9699,9 @@ msgid "Number of chapters:"
 msgstr "Numero dei capitoli:"
 
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:131
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Number of errors:"
-msgstr "Numero dei capitoli:"
+msgstr "Numero di errori:"
 
 #: src/mkvtoolnix-gui/info/element_highlighter.cpp:197
 #, no-c-format
@@ -9714,9 +9714,9 @@ msgid "Number of nanoseconds (not scaled) per frame."
 msgstr "Numero nanosecondi (non scalati) per frame."
 
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:126
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Number of warnings:"
-msgstr "Numero dei capitoli:"
+msgstr "Numero di avvisi:"
 
 #: src/common/property_element.cpp:213
 #, no-c-format
