program translations: update Norwegian Bokmål

--- a/po/nb.po
+++ b/po/nb.po
@@ -1615,7 +1615,7 @@ msgstr[1] "%1 oppføringer"
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:133
 #, no-c-format
 msgid "%1 from earlier runs"
-msgstr ""
+msgstr "%1 fra tidligere kjøringer"
 
 #: src/mkvtoolnix-gui/header_editor/track_type_page.cpp:142
 #: src/mkvtoolnix-gui/merge/select_playlist_dialog.cpp:118
@@ -1628,21 +1628,21 @@ msgstr "%1 piksler"
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:132
 #, no-c-format
 msgid "%1 since starting the program"
-msgstr ""
+msgstr "%1 siden oppstart av programmet"
 
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:117
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "%1+%2 error"
 msgid_plural "%1+%2 errors"
-msgstr[0] "%1 feil"
-msgstr[1] "%1 feil"
+msgstr[0] "%1+%2 feil"
+msgstr[1] "%1+%2 feil"
 
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:116
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "%1+%2 warning"
 msgid_plural "%1+%2 warnings"
-msgstr[0] "%1 advarsel"
-msgstr[1] "%1 advarsler"
+msgstr[0] "%1+%2 advarsel"
+msgstr[1] "%1+%2 advarsler"
 
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:350
 #, no-c-format
@@ -9663,9 +9663,9 @@ msgid "Number of chapters:"
 msgstr "Antall kapitler:"
 
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:131
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Number of errors:"
-msgstr "Antall kapitler:"
+msgstr "Antall feil:"
 
 #: src/mkvtoolnix-gui/info/element_highlighter.cpp:197
 #, no-c-format
@@ -9678,9 +9678,9 @@ msgid "Number of nanoseconds (not scaled) per frame."
 msgstr "Antall nanosekunder (ikke skalert) per ramme."
 
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:126
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Number of warnings:"
-msgstr "Antall kapitler:"
+msgstr "Antall advarsler:"
 
 #: src/common/property_element.cpp:213
 #, no-c-format
