--- a/doc/man/po4a/po/fr.po
+++ b/doc/man/po4a/po/fr.po
@@ -11,7 +11,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix\n"
-"POT-Creation-Date: 2024-07-13 18:08+0200\n"
+"POT-Creation-Date: 2024-09-07 13:06+0200\n"
 "PO-Revision-Date: 2016-02-03 20:53+0000\n"
 "Last-Translator: tmtisfree <tmtisfree@free.fr>, 2016-2024\n"
 "Language-Team: French (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/fr/)\n"
@@ -32,8 +32,8 @@ msgstr "mkvextract"
 #: doc/man/mkvmerge.xml:6
 #: doc/man/mkvpropedit.xml:6
 #: doc/man/mkvtoolnix-gui.xml:6
-msgid "86.0"
-msgstr "86.0"
+msgid "87.0"
+msgstr "87.0"
 
 #. type: Content of the date entity
 #: doc/man/mkvextract.xml:7
@@ -42,9 +42,9 @@ msgstr "86.0"
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
 #, fuzzy
-#| msgid "2024-06-02"
-msgid "2024-07-13"
-msgstr "2024-06-02"
+#| msgid "2020-09-06"
+msgid "2024-09-07"
+msgstr "06-09-2020"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -5782,6 +5782,10 @@ msgstr "("
 msgid ")"
 msgstr ")"
 
+#~| msgid "2024-06-02"
+#~ msgid "2024-07-13"
+#~ msgstr "2024-06-02"
+
 #~| msgid "<productname>Matroska</productname>"
 #~ msgid "<productname>MakeMKV</productname>"
 #~ msgstr "<productname>Matroska</productname>"
@@ -5820,9 +5824,6 @@ msgstr ")"
 
 #~ msgid "Forces the <abbrev>NALU</abbrev> size length to <parameter>n</parameter> bytes.  This parameter is only used if the AVC/H.264 elementary stream packetizer is used.  If left out it defaults to 4 bytes, but there are files that contain frames or slices that are all smaller than 65536 bytes.  For such files you can use this parameter and decrease the size to 2."
 #~ msgstr "Force la longueur de taille <abbrev>NALU</abbrev> à <parameter>n</parameter> octets. Ce paramètre est seulement utilisé si l'empaqueteur de flux élémentaire AVC/H.264 est utilisé. 4 octets par défaut si omis, mais il existe des fichiers qui contiennent des trames ou tranches plus petites que 65536 octets. Pour de tels fichiers, il est possible d'utiliser ce paramètre et diminuer la taille à 2."
-
-#~ msgid "2020-09-06"
-#~ msgstr "06-09-2020"
 
 #~ msgid "Sets the charset that is used for the conversion to UTF-8 for chapter information contained in the source file. See the section about <link linkend=\"mkvmerge.text_files_and_charsets\">text files and character sets</link> for an explanation how &mkvmerge; converts between character sets."
 #~ msgstr "Définit le jeu de caractères utilisé pour la conversion vers UTF-8 des informations de chapitres contenues dans le fichier source. Voir la section à propos <link linkend=\"mkvmerge.text_files_and_charsets\">des fichiers texte et des jeux de caractères</link> pour savoir comment &mkvmerge; convertit les jeux de caractères."
