--- a/doc/man/po4a/po/ja.po
+++ b/doc/man/po4a/po/ja.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: 5.0.1\n"
-"POT-Creation-Date: 2024-07-13 18:08+0200\n"
+"POT-Creation-Date: 2024-09-07 13:06+0200\n"
 "PO-Revision-Date: 2021-07-10 11:49+0200\n"
 "Last-Translator: YOSHIDUMI, Rentaro\n"
 "Language-Team: Japanese (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/ja/)\n"
@@ -28,7 +28,7 @@ msgstr "mkvextract"
 #: doc/man/mkvtoolnix-gui.xml:6
 #, fuzzy
 #| msgid "34.0.0"
-msgid "86.0"
+msgid "87.0"
 msgstr "34.0.0"
 
 #. type: Content of the date entity
@@ -37,8 +37,10 @@ msgstr "34.0.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-msgid "2024-07-13"
-msgstr ""
+#, fuzzy
+#| msgid "2020-09-06"
+msgid "2024-09-07"
+msgstr "2020-08-02"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -5988,10 +5990,6 @@ msgstr "）"
 
 #~ msgid "Forces the <abbrev>NALU</abbrev> size length to <parameter>n</parameter> bytes.  This parameter is only used if the AVC/H.264 elementary stream packetizer is used.  If left out it defaults to 4 bytes, but there are files that contain frames or slices that are all smaller than 65536 bytes.  For such files you can use this parameter and decrease the size to 2."
 #~ msgstr "<abbrev>NALU</abbrev>サイズ長を<parameter>n</parameter>バイトに強制設定します。このパラメータはAVC/H.264エレメンタリストリームパケタイザが使用される場合にのみ使用されます。何も指定しなかった時の既定値は4バイトですが、65535バイト以上のこまやスライスが含まれていないファイルも存在します。そのようなファイルでは、このパラメータを使用してNALUサイズ長を2に減らすことができます。"
-
-#~| msgid "2020-08-02"
-#~ msgid "2020-09-06"
-#~ msgstr "2020-08-02"
 
 #~ msgid "Sets the charset that is used for the conversion to UTF-8 for chapter information contained in the source file. See the section about <link linkend=\"mkvmerge.text_files_and_charsets\">text files and character sets</link> for an explanation how &mkvmerge; converts between character sets."
 #~ msgstr "ソースファイルに含まれる楽章情報ををUTF-8に変換する際の文字コードを指定します。&mkvmerge;の文字コード変換については、<link linkend=\"mkvmerge.text_files_and_charsets\">文章ファイルと文字コード</link>のセクションを参照してください。"
