--- a/doc/man/po4a/po/ca.po
+++ b/doc/man/po4a/po/ca.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix\n"
-"POT-Creation-Date: 2024-07-13 18:08+0200\n"
+"POT-Creation-Date: 2024-09-07 13:06+0200\n"
 "PO-Revision-Date: 2016-02-03 20:53+0000\n"
 "Last-Translator: Antoni Bella Pérez <antonibella5@yahoo.com>, 2016-2024\n"
 "Language-Team: Catalan (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/ca/)\n"
@@ -29,8 +29,8 @@ msgstr "mkvextract"
 #: doc/man/mkvmerge.xml:6
 #: doc/man/mkvpropedit.xml:6
 #: doc/man/mkvtoolnix-gui.xml:6
-msgid "86.0"
-msgstr "86.0"
+msgid "87.0"
+msgstr "87.0"
 
 #. type: Content of the date entity
 #: doc/man/mkvextract.xml:7
@@ -39,9 +39,9 @@ msgstr "86.0"
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
 #, fuzzy
-#| msgid "2024-03-10"
-msgid "2024-07-13"
-msgstr "10/03/2024"
+#| msgid "2020-09-06"
+msgid "2024-09-07"
+msgstr "06/09/2020"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -5773,6 +5773,10 @@ msgstr "("
 msgid ")"
 msgstr ")"
 
+#~| msgid "2024-03-10"
+#~ msgid "2024-07-13"
+#~ msgstr "10/03/2024"
+
 #~| msgid "<productname>Matroska</productname>"
 #~ msgid "<productname>MakeMKV</productname>"
 #~ msgstr "<productname>Matroska</productname>"
@@ -5811,9 +5815,6 @@ msgstr ")"
 
 #~ msgid "Forces the <abbrev>NALU</abbrev> size length to <parameter>n</parameter> bytes.  This parameter is only used if the AVC/H.264 elementary stream packetizer is used.  If left out it defaults to 4 bytes, but there are files that contain frames or slices that are all smaller than 65536 bytes.  For such files you can use this parameter and decrease the size to 2."
 #~ msgstr "Força la longitud de la mida <abbrev>NALU</abbrev> en <parameter>n</parameter> bytes. Aquest paràmetre només s'empra si s'empra l'empaquetador de fluxos elementals AVC/H.264. Si s'omet, per omissió emprarà 4 bytes, però hi ha fitxers que contenen fotogrames o talls els quals són tots menors que 65536 bytes. Per a aquests fitxers, podeu emprar aquest paràmetre i disminuir la mida a 2."
-
-#~ msgid "2020-09-06"
-#~ msgstr "06/09/2020"
 
 #~ msgid "Sets the charset that is used for the conversion to UTF-8 for chapter information contained in the source file. See the section about <link linkend=\"mkvmerge.text_files_and_charsets\">text files and character sets</link> for an explanation how &mkvmerge; converts between character sets."
 #~ msgstr "Estableix el joc de caràcters que es farà servir per a la conversió a UTF-8 per a la informació de capítols continguda al fitxer d'origen. Vegeu la secció sobre <link linkend=\"mkvmerge.text_files_and_charsets\">la conversió per a fitxers de text i jocs de caràcters</link>, per a veure una explicació sobre com realitza el &mkvmerge; la conversió entre diferents jocs de caràcters."
