--- a/doc/man/po4a/po/de.po
+++ b/doc/man/po4a/po/de.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: mkvtoolnix\n"
 "Report-Msgid-Bugs-To: mo@bunkus.online\n"
-"POT-Creation-Date: 2024-07-13 18:08+0200\n"
+"POT-Creation-Date: 2024-09-07 13:06+0200\n"
 "PO-Revision-Date: 2024-06-13 12:00+0200\n"
 "Last-Translator: Moritz Bunkus <mo@bunkus.online>\n"
 "Language-Team: German <mo@bunkus.online>\n"
@@ -27,8 +27,8 @@ msgstr "mkvextract"
 #: doc/man/mkvmerge.xml:6
 #: doc/man/mkvpropedit.xml:6
 #: doc/man/mkvtoolnix-gui.xml:6
-msgid "86.0"
-msgstr "86.0"
+msgid "87.0"
+msgstr "87.0"
 
 #. type: Content of the date entity
 #: doc/man/mkvextract.xml:7
@@ -37,9 +37,9 @@ msgstr "86.0"
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
 #, fuzzy
-#| msgid "2024-06-02"
-msgid "2024-07-13"
-msgstr "2024-06-02"
+#| msgid "2020-09-06"
+msgid "2024-09-07"
+msgstr "2020-09-06"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -5782,6 +5782,10 @@ msgstr "("
 msgid ")"
 msgstr ")"
 
+#~| msgid "2024-06-02"
+#~ msgid "2024-07-13"
+#~ msgstr "2024-06-02"
+
 #~| msgid "<productname>Matroska</productname>"
 #~ msgid "<productname>MakeMKV</productname>"
 #~ msgstr "<productname>Matroska</productname>"
@@ -5824,9 +5828,6 @@ msgstr ")"
 
 #~ msgid "Forces the <abbrev>NALU</abbrev> size length to <parameter>n</parameter> bytes.  This parameter is only used if the AVC/H.264 elementary stream packetizer is used.  If left out it defaults to 4 bytes, but there are files that contain frames or slices that are all smaller than 65536 bytes.  For such files you can use this parameter and decrease the size to 2."
 #~ msgstr "Erzwingt eine Länge der <abbrev>NALU</abbrev>-Größe von <parameter>n</parameter> Byte. Dieser Parameter wird nur benutzt, falls der einfache AVC/H.264-Datenströme verwendet wird. Falls er weggelassen wird, ist die Voreinstellung 4 Byte, es gibt aber Dateien, die Bilder oder Teile enthalten, die alle kleiner als 65536 Byte sind. Für derartige Dateien können Sie diesen Parameter benutzen und die Größe auf 2 vermindern."
-
-#~ msgid "2020-09-06"
-#~ msgstr "2020-09-06"
 
 #~ msgid "Sets the charset that is used for the conversion to UTF-8 for chapter information contained in the source file. See the section about <link linkend=\"mkvmerge.text_files_and_charsets\">text files and character sets</link> for an explanation how &mkvmerge; converts between character sets."
 #~ msgstr "setzt den Zeichensatz, der für die Umwandlung der in der Quelldatei enthaltenen Kapitelinformation nach UTF-8 verwendet wird. Eine Erklärung, wie &mkvmerge; Zeichensätze umwandelt, finden Sie im Abschnitt über <link linkend=\"mkvmerge.text_files_and_charsets\">Textdateien und Zeichensätze</link>."
