--- a/doc/man/po4a/po/es.po
+++ b/doc/man/po4a/po/es.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix 8.0.0\n"
-"POT-Creation-Date: 2024-07-13 18:08+0200\n"
+"POT-Creation-Date: 2024-09-07 13:06+0200\n"
 "PO-Revision-Date: 2016-02-03 20:53+0000\n"
 "Last-Translator: Casper, 2024\n"
 "Language-Team: Spanish (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/es/)\n"
@@ -28,8 +28,8 @@ msgstr "mkvextract"
 #: doc/man/mkvmerge.xml:6
 #: doc/man/mkvpropedit.xml:6
 #: doc/man/mkvtoolnix-gui.xml:6
-msgid "86.0"
-msgstr "86.0"
+msgid "87.0"
+msgstr "87.0"
 
 #. type: Content of the date entity
 #: doc/man/mkvextract.xml:7
@@ -38,9 +38,9 @@ msgstr "86.0"
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
 #, fuzzy
-#| msgid "2024-06-02"
-msgid "2024-07-13"
-msgstr "2024-06-02"
+#| msgid "2020-09-06"
+msgid "2024-09-07"
+msgstr "2020-09-06"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -5800,6 +5800,10 @@ msgstr "("
 msgid ")"
 msgstr ")"
 
+#~| msgid "2024-06-02"
+#~ msgid "2024-07-13"
+#~ msgstr "2024-06-02"
+
 #~| msgid "<productname>Matroska</productname>"
 #~ msgid "<productname>MakeMKV</productname>"
 #~ msgstr "<productname>Matroska</productname>"
@@ -5838,9 +5842,6 @@ msgstr ")"
 
 #~ msgid "Forces the <abbrev>NALU</abbrev> size length to <parameter>n</parameter> bytes.  This parameter is only used if the AVC/H.264 elementary stream packetizer is used.  If left out it defaults to 4 bytes, but there are files that contain frames or slices that are all smaller than 65536 bytes.  For such files you can use this parameter and decrease the size to 2."
 #~ msgstr "Fuerza la longitud del tamaño <abbrev>NALU</abbrev> en <parameter>n</parameter> bytes. Este parámetro sólo se utiliza al usar el empaquetador de secuencias elementales AVC/H.264. Si se omite por defecto usa 4 bytes, pero pueden existir archivos que contengan fotogramas o fragmentos menores de 65536 bytes. Para dichos archivos puede usar este parámetro y disminuir el tamaño a 2. "
-
-#~ msgid "2020-09-06"
-#~ msgstr "2020-09-06"
 
 #~ msgid "Sets the charset that is used for the conversion to UTF-8 for chapter information contained in the source file. See the section about <link linkend=\"mkvmerge.text_files_and_charsets\">text files and character sets</link> for an explanation how &mkvmerge; converts between character sets."
 #~ msgstr "Establece el conjunto de caracteres que se usarán en la conversión a UTF-8 de la información de capítulos almacenada en el archivo de entrada. Mire la sección acerca de <link linkend=\"mkvmerge.text_files_and_charsets\">la conversión de archivos de texto y conjunto de caracteres</link> para una explicación sobre cómo &mkvmerge; realiza la conversión entre conjunto de caracteres. "
