--- a/doc/man/po4a/po/it.po
+++ b/doc/man/po4a/po/it.po
@@ -8,7 +8,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix\n"
-"POT-Creation-Date: 2024-07-13 18:08+0200\n"
+"POT-Creation-Date: 2024-09-07 13:06+0200\n"
 "PO-Revision-Date: 2022-03-08 08:07+0000\n"
 "Last-Translator: ROBERTO BORIOTTI <roberto.boriotti@canon.it>\n"
 "Language-Team: Italian (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/it/)\n"
@@ -29,8 +29,8 @@ msgstr "mkvextract"
 #: doc/man/mkvmerge.xml:6
 #: doc/man/mkvpropedit.xml:6
 #: doc/man/mkvtoolnix-gui.xml:6
-msgid "86.0"
-msgstr "86.0"
+msgid "87.0"
+msgstr "87.0"
 
 #. type: Content of the date entity
 #: doc/man/mkvextract.xml:7
@@ -38,8 +38,10 @@ msgstr "86.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-msgid "2024-07-13"
-msgstr ""
+#, fuzzy
+#| msgid "2020-09-06"
+msgid "2024-09-07"
+msgstr "2020-08-02"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -5742,10 +5744,6 @@ msgstr ")"
 
 #~ msgid "<option>--nalu-size-length</option> <parameter>TID:n</parameter>"
 #~ msgstr "<option>--nalu-size-length</option> <parameter>TID:n</parameter>"
-
-#~| msgid "2020-08-02"
-#~ msgid "2020-09-06"
-#~ msgstr "2020-08-02"
 
 #~ msgid "Subtitles"
 #~ msgstr "Sottotitoli"
