--- a/doc/man/po4a/po/ko.po
+++ b/doc/man/po4a/po/ko.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix\n"
-"POT-Creation-Date: 2024-07-13 18:08+0200\n"
+"POT-Creation-Date: 2024-09-07 13:06+0200\n"
 "PO-Revision-Date: 2022-07-07 18:33+0200\n"
 "Last-Translator: 양성욱, 2022\n"
 "Language-Team: Korean (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/ko/)\n"
@@ -29,7 +29,7 @@ msgstr "mkvextract"
 #: doc/man/mkvtoolnix-gui.xml:6
 #, fuzzy
 #| msgid "34.0.0"
-msgid "86.0"
+msgid "87.0"
 msgstr "34.0.0"
 
 #. type: Content of the date entity
@@ -38,8 +38,10 @@ msgstr "34.0.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-msgid "2024-07-13"
-msgstr ""
+#, fuzzy
+#| msgid "2020-09-06"
+msgid "2024-09-07"
+msgstr "2018-01-15"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -5822,10 +5824,6 @@ msgstr ")"
 
 #~ msgid "The segment info XML files"
 #~ msgstr "세그먼트 정보 XML 파일"
-
-#~| msgid "2019-08-24"
-#~ msgid "2020-09-06"
-#~ msgstr "2018-01-15"
 
 #~ msgid "Subtitles"
 #~ msgstr "자막"
