--- a/doc/man/po4a/po/zh_CN.po
+++ b/doc/man/po4a/po/zh_CN.po
@@ -4,7 +4,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: mkvtoolnix-man\n"
-"POT-Creation-Date: 2024-07-13 18:08+0200\n"
+"POT-Creation-Date: 2024-09-07 13:06+0200\n"
 "PO-Revision-Date: 2016-02-03 20:53+0000\n"
 "Last-Translator: Dian Li <xslidian@gmail.com>, 2009-2024\n"
 "Language-Team: Chinese (China) (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/zh_CN/)\n"
@@ -27,8 +27,8 @@ msgstr "mkvextract"
 #: doc/man/mkvmerge.xml:6
 #: doc/man/mkvpropedit.xml:6
 #: doc/man/mkvtoolnix-gui.xml:6
-msgid "86.0"
-msgstr "86.0"
+msgid "87.0"
+msgstr "87.0"
 
 #. type: Content of the date entity
 #: doc/man/mkvextract.xml:7
@@ -36,8 +36,10 @@ msgstr "86.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-msgid "2024-07-13"
-msgstr ""
+#, fuzzy
+#| msgid "2020-09-06"
+msgid "2024-09-07"
+msgstr "2020-08-02"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -5808,10 +5810,6 @@ msgstr ")"
 
 #~ msgid "Forces the <abbrev>NALU</abbrev> size length to <parameter>n</parameter> bytes.  This parameter is only used if the AVC/H.264 elementary stream packetizer is used.  If left out it defaults to 4 bytes, but there are files that contain frames or slices that are all smaller than 65536 bytes.  For such files you can use this parameter and decrease the size to 2."
 #~ msgstr "强制 <abbrev>NALU</abbrev> 长度为 <parameter>n</parameter> 字节。 此变量仅当使用 AVC/H.264 基本流分包器时使用。 如果留空，则默认为 4 字节，然而有的文件包含的所有帧或切片都小于 65536 字节。 对此类文件您可以使用此参数并将长度降为 2。"
-
-#~| msgid "2020-08-02"
-#~ msgid "2020-09-06"
-#~ msgstr "2020-08-02"
 
 #~ msgid "Sets the charset that is used for the conversion to UTF-8 for chapter information contained in the source file. See the section about <link linkend=\"mkvmerge.text_files_and_charsets\">text files and character sets</link> for an explanation how &mkvmerge; converts between character sets."
 #~ msgstr "设置输入文件中章节信息的字符集，以供转为 UTF-8 之用。关于 &mkvmerge; 如何在字符集之间进行转换的说明，请参阅下文 <link linkend=\"mkvmerge.text_files_and_charsets\"> 文本文件与字符集</link> 段落。"
