--- a/packaging/debian/changelog
+++ b/packaging/debian/changelog
@@ -1,3 +1,9 @@
+mkvtoolnix (87.0-0~bunkus01) noble; urgency=low
+
+  * New version.
+
+ -- Moritz Bunkus <moritz@bunkus.org>  Sat, 07 Sep 2024 13:06:32 +0200
+
 mkvtoolnix (86.0-0~bunkus01) noble; urgency=low
 
   * New version.
