--- a/po/nl.po
+++ b/po/nl.po
@@ -5062,33 +5062,33 @@ msgstr "Houder"
 #: src/mkvtoolnix-gui/info/model.cpp:86
 #, no-c-format
 msgid "Content"
-msgstr "Houder"
+msgstr "Inhoud"
 
 #: src/common/kax_element_names.cpp:174
 #, no-c-format
 msgid "Content compression"
-msgstr "Compressie inhoud"
+msgstr "Inhoudscompressie"
 
 #: src/common/kax_element_names.cpp:170
 #, no-c-format
 msgid "Content encoding"
-msgstr "Inhoud coderen"
+msgstr "Inhoudscodering"
 
 #: src/common/kax_element_names.cpp:169
 #: src/common/kax_element_names.cpp:217
 #, no-c-format
 msgid "Content encodings"
-msgstr "Inhoud coderingen"
+msgstr "Inhoudscoderingen"
 
 #: src/common/kax_element_names.cpp:177
 #, no-c-format
 msgid "Content encryption"
-msgstr "Inhoud encryptie"
+msgstr "Inhoudsencryptie"
 
 #: src/mkvtoolnix-gui/info/element_highlighter.cpp:231
 #, no-c-format
 msgid "Content size:"
-msgstr "Houder grootte"
+msgstr "Inhoudsgrootte:"
 
 #: src/extract/extract_cli_parser.cpp:78
 #, no-c-format
@@ -5149,12 +5149,12 @@ msgstr "Kon decoder specifieke configuratie data niet uitpakken (AVCC) van dit A
 #: src/input/r_avi.cpp:314
 #, no-c-format
 msgid "Could not extract the sequence header from this MPEG-1/2 track.\n"
-msgstr "Kon geen uittreksel maken van de opeenvolgende beginblok van dit MPEG-1/2 spoor.\n"
+msgstr "De sequentieheader van dit MPEG-1/2-spoor kon niet worden geëxtraheerd.\n"
 
 #: src/input/r_avi.cpp:451
 #, no-c-format, c++-format
 msgid "Could not find an index for audio track {0} (avilib error message: {1}). Skipping track.\n"
-msgstr "Kan geen index vinden voor audio spoor {0} (fout code: {1}). Sla spoor over.\n"
+msgstr "Kan geen index vinden voor audio spoor {0} (avilib fout code: {1}). Spoor wordt overgeslagen.\n"
 
 #: src/merge/output_control.cpp:1882
 #, no-c-format, c++-format
